--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         </div>
     </div>
-
+    <footer id=foot>Site desenvolvido por Nicolas Mendes e Samuel dos Anjos | 2021</footer>
     <script src="js/scripts.js"></script>
 </body>
 
