--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:wght@300&display=swap"
         rel="stylesheet">
-        <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.ico">
     <title>Avaliação Articulada - Biologia II</title>
 </head>
 
@@ -30,24 +30,107 @@
                 Sistema Nervoso, um texto sobre o Sistema Cardiovascular, uma matéria sobre o Sistema Respiratório, um
                 panfleto sobre o Sistema Digestório e um desenho sobre o Sistema Esquelético.</p>
         </div>
-        <div id="contflyer">
-            <p>flyer</p>
+        <div id="contflyer" class="cont">
+            <h3 class="titulo_sistemas">Sistema Digestório - Panfleto</h3>
+            <img id="foto1diges" src="content\sistema digestório - panfleto\1.jpg"
+                alt="panfleto sobre o sistema digestório">
+            <img id="foto2diges" src="content\sistema digestório - panfleto\2.jpg"
+                alt="panfleto sobre o sistema digestório">
         </div>
 
-        <div id="contmaquete">
-            <p>maquete</p>
+        <div id="contmaquete" class="cont">
+            <h3 class="titulo_sistemas">Sistema Esquelético - Desenho</h3>
+            <img id="foto_sistema_esquelético" src="content\sistema esquelético - desenho\certo.jpg"
+                alt="desenho do sistema esquelético">
+            <br>
+            <figcaption><i>Foto do Mascote do trabalho</i></figcaption>
+            <h2 class="subtitulo_sistemas">Sistema Esquelético - Imagem explicativa</h2>
+            <img id="render_esque"
+                src="content\sistema esquelético - desenho\WhatsApp Image 2021-05-31 at 08.54.10.jpeg"
+                alt="renderização contendo o sistema esquelético">
+
         </div>
 
-        <div id="contmateria">
-            <p>materia</p>
+        <div id="contmateria" class="cont">
+            <h3 class="titulo_sistemas">Sistema Respiratório - Matéria</h3>
+            <h2 class="titulo_sistemas">COVID-19 ATACA O SISTEMA RESPIRATÓRIO </h2>
+            <h3 style="font-family: 'Poppins'; font-weight: bold;">Pessoas devem manter hábitos de higiene mais rígidos
+                regularmente, em qualquer lugar.</h3>
+
+            <p style="font-family: 'Poppins'; text-align:initial;"> Seres humanos estão sujeitos a contrair qualquer
+                doença, dentre elas, as respiratórias. Como por
+                exemplo: Pneumonia, sinusite, tuberculose, gripe, COVID-19, entre outras.
+                Principais responsáveis dessas doenças são vírus que através de gotículas respiratórias são
+                transmitidos, principalmente em lugares fechados quando a imunidade está baixa.
+                <br><br>
+                O coronavírus entra nos pulmões pela contaminação aérea, ocasionando uma inflamação, que pode chegar em
+                até casos graves de pneumonia, e até a morte.Durante a infecção, há um aumento na produção de muco,
+                ocorre a obstrução das pequenas vias aéreas e surgem lesões nos pulmões. O corpo humano responde à
+                invasão do novo coronavírus e, neste processo, surge a falta de ar.
+                <br><br>
+                Temos vacinas sendo feitas mas não disponível para todos nos no momento.É de extrema importância apostar
+                nas medidas de prevenção para evitar prejuízos aos pulmões e ao sistema respiratório.Usar máscaras ao
+                sair na rua, álcool em gel, água e sabão para higienizar as mãos e cobrir a boca ao espirrar com o braço
+                e distanciamento social são alguns exemplos de atitudes fundamentais para reduzir a transmissão do vírus
+                causador da
+                COVID-19.</p>
         </div>
 
-        <div id="conttexto">
-            <p>texto</p>
+        <div id="conttexto" class="cont">
+            <h3 class="titulo_sistemas">Sistema Cardiovascular - Texto</h3>
+            <h3 class="titulo_sistemas">A trágica jornada do oxigênio no país do sangue</h3>
+            <p id="texto">- Onde estou? Pelo que posso ver é um lugar cavernoso, algo me puxou para cá. <br>
+                De repente me encontrei sendo levado a caminho de um lugar chamado alvéolo, um lugar com paredes muito
+                delgadas, era um lugar realmente estranho, comecei a ficar com medo. Logo a frente avisto um rio
+                vermelho, cujo tal estava cheio de barquinhos, como o pessoal que estava ao meu lado começou a pular
+                nesses barquinhos, pensei que seria uma boa ideia. Logo pergunto para a pessoa ao lado: <br>
+                - Que rio é esse? Onde ele nos levará?<br>
+                A pessoa me respondeu: <br>
+                - Esse rio se chama artéria e nos levará ao reino central. <br>
+                Confuso, mas já sabendo qual a situação eu pergunto:  <br>
+                - Mas o que faremos ao chegar lá?  <br>
+                Já nervoso com tantas perguntas a pessoa me respondeu:  <br>
+                - Chegando lá você verá! <br>
+                E assim começou minha jornada!
+                Olhando ao redor vejo pessoas de diferentes fisionomias e percebo que estou embarcado em uma pessoa!
+                Vejo soldados usando um uniforme branco e estão sempre fazendo cara de mal, vejo também pequenos
+                funcionários que fazem manutenção em vazamentos no rio. Olho para baixo e vejo que o bote possui corpo
+                arredondado e é muito confortável. <br>
+                Depois de um longo caminho e muitos obstáculos, avisto a central cuja a pessoa se referia, logo fica
+                claro que a central irá nos redirecionar para vários locais diferentes, o medo começa a surgir, pois não
+                sei o que me aguarda. Entrando nos portões da central pergunto a um dos guardas: <br>
+                - Para onde seremos levados? <br>
+                O guarda com muita pressa fala: <br>
+                - Você e os outros serão encaminhados para vários setores dessa enorme rede de rios para ajudar algumas
+                células. <br>
+                Em questão de segundo somos levados a uma espécie de câmara e rapidamente essa câmara nos impulsiona
+                para um outro rio. Mais um longo caminho pela frente, dessa vez nos deparamos com um obstáculo amarelado
+                enorme pela frente e quase fomos impedidos de passar. Chegando ao nosso destino, vejo que o rio vai se
+                estreitando e pergunto para um dos pequenos funcionários ao lodo: <br>
+                - Que lugar é esse? A propósito, o que você é? <br>
+                Ele com calma e educação me responde: <br>
+                - Prazer, me chamo plaqueta! Nós estamos no setor de apoio ao braço, no caso essa estrutura gigante que
+                possui vários componentes! Posso dizer vocês são de extrema importância para todos os setores. <br>
+                Ainda confuso, pergunto a ele: <br>
+                - Mas senhor, como podemos ajudar se somos tão pequenos? <br>
+                Com uma feição de tristeza e fazendo um gesto saudação ele me disse: <br>
+                - Para tal feito, vocês serão transformados em energia, mas para isso suas vidas serão sacrificadas... <br>
+                Um sentimento de pânico se alastrou por meu corpo e incontrolavelmente comecei a chorar. Agradeci a
+                plaqueta e voltei a observar ao meu redor. Percebi que logo à frente o córrego acabava em um penhasco
+                que dava em uma estrutura cheia de fibras onde as pessoas iguais a mim eram jogadas. Como eu não havia
+                feito nada de bom na minha vida, aceitei que poderia ajudar em alguma coisa grandiosa dando minha vida
+                em troca. Com medo, mas aliviado, fechei meus olhos e esperei pela minha vez, ao chegar à beira do
+                penhasco, gritei: <br>
+                - Não estou a muito tempo aqui e sei de meu trágico destino, mas fico feliz em ajudar alguém mesmo não
+                sabendo de quem se trata... <br>
+                Os guardas em sinal de homenagem a todos os que foram mortos, bateram continência.
+            </p>
+
+
         </div>
 
         <div id="contvideo">
-            <p>video</p>
+            <h3 class="titulo_sistemas">Sistema Nervoso - Vídeo</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/dA8QGHCa0Pk"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -62,13 +145,13 @@
 
             <a href="#contmaquete"><button id="maquete" onclick="mostramaquete()">Desenho</button></a>
 
-            <a href="#contmateria"><button id="materia" onclick="mostramateria()">Matéria Jornalística</button></a>
+            <a href="#contmateria"><button id="materia" onclick="mostramateria()">Matéria</button></a>
 
             <a href="#conttexto"><button id="texto" onclick="mostratexto()">Texto</button></a>
 
         </div>
     </div>
-    <footer id=foot>Site desenvolvido por Nicolas Mendes e Samuel dos Anjos | 2021</footer>
+    <!--<footer id=foot>Site desenvolvido por Nicolas Mendes e Samuel dos Anjos | 2021</footer> -->
     <script src="js/scripts.js"></script>
 </body>
 
