--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <img id="corpopng" src="images/2867197.png" alt="foto que ilustra corpo humano">
     <img id="corpopng2" src="images/776218.png" alt="foto que ilustra corpo humano">
     <img id="corpopng3" src="images/401-4010679_anatomical-model-artifact-anatomy-mannequin.png" alt="manequim humano">
-    <div style="text-align: center;">
+    <div  id="page" style="text-align: center;">
+        
         <h1 id="titulo">Avaliação Articulada de Biologia II - Turma AUT2D3</h1>
         <h2 id="tema">Tema: Anatomia e Fisiologia Humana</h2>
         <div id="resumo">
@@ -204,7 +205,10 @@
 
 
     </div>
-    <!--<footer id=foot>Site desenvolvido por Nicolas Mendes e Samuel dos Anjos | 2021</footer> -->
+    <!--<footer id=foot>Site desenvolvido para Desktop</footer> -->
+    <a href="#page"><button id="btnselec">Voltar para o menu dos materiais</button></a>
+   <!-- <p id="textmodoescuro">Modo escuro</p>
+    <input type="checkbox" onclick="modoescuro()" id="btnmodoescuro"> -->
     <script src="js/scripts.js"></script>
 </body>
 
